[gd_scene load_steps=29 format=2]

[ext_resource path="res://scenes/game/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/mic_recording/MicRecord.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game/game_ui.gd" type="Script" id=3]
[ext_resource path="res://assets/hands/g_dossier.png" type="Texture" id=4]
[ext_resource path="res://assets/hands/d_dossier.png" type="Texture" id=5]
[ext_resource path="res://assets/hands/g_idle.png" type="Texture" id=6]
[ext_resource path="res://assets/hands/r_punch_1.png" type="Texture" id=7]
[ext_resource path="res://scenes/game/hand.gd" type="Script" id=8]
[ext_resource path="res://scenes/game/GameGraphics.gd" type="Script" id=9]
[ext_resource path="res://assets/hands/r_punch_2.png" type="Texture" id=10]
[ext_resource path="res://assets/hands/g_order.png" type="Texture" id=11]
[ext_resource path="res://assets/fonts/Volkhov/Volkhov-Bold.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/background/all.png" type="Texture" id=13]
[ext_resource path="res://scenes/game/score.gd" type="Script" id=14]
[ext_resource path="res://scenes/game/combo.gd" type="Script" id=15]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 456, 808 ), Vector2( 440, 824 ), Vector2( 456, 808 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1520, 808 ), Vector2( 1520, 824 ), Vector2( 1520, 808 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.815686, 0.894118, 0.65098, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.105882, 0.603922, 0.360784, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 3
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=6]
size = 30
outline_size = 4
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 1, 0.0862745, 0.368627 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.611765, 1, 0.333333 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=9]
size = 200
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=10]
size = 150
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=11]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=12]
size = 64
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=13]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1173.2, 258.824 ), Vector2( 1185.5, 279.329 ), Vector2( 1173.2, 258.824 ) ]
}

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="MicRecord" parent="." instance=ExtResource( 2 )]

[node name="GameGraphics" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="background" type="Sprite" parent="GameGraphics"]
position = Vector2( 960, 539.942 )
scale = Vector2( 4, 4 )
texture = ExtResource( 13 )

[node name="dossier_1" type="Sprite" parent="GameGraphics"]
position = Vector2( 496, 912 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="dossier_2" type="Sprite" parent="GameGraphics"]
position = Vector2( 1424, 912 )
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )

[node name="hand_g" type="Sprite" parent="GameGraphics"]
position = Vector2( 416, 824 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
script = ExtResource( 8 )
idle_texture = ExtResource( 6 )
action_texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameGraphics/hand_g"]
anims/idle = SubResource( 1 )

[node name="hand_d" type="Sprite" parent="GameGraphics"]
position = Vector2( 1464, 808 )
scale = Vector2( 4, 4 )
texture = ExtResource( 7 )
script = ExtResource( 8 )
idle_texture = ExtResource( 7 )
action_texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameGraphics/hand_d"]
anims/idle = SubResource( 2 )

[node name="GameUi" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="table_punch_player" type="AudioStreamPlayer2D" parent="GameUi"]
position = Vector2( 1340.23, 835.696 )

[node name="voice_bar" type="ProgressBar" parent="GameUi"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -201.304
margin_top = 1033.15
margin_right = 98.6962
margin_bottom = 1097.15
rect_min_size = Vector2( 100, 32 )
rect_rotation = -89.9999
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
max_value = 200.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GameUi/voice_bar"]
margin_left = 215.742
margin_top = -0.000488281
margin_right = 219.742
margin_bottom = 63.9995
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameUi/voice_bar"]
margin_left = 246.241
margin_top = 7.29782
margin_right = 390.241
margin_bottom = 59.2978
rect_rotation = 86.1775
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.815686, 0.894118, 0.65098, 1 )
custom_colors/font_outline_modulate = Color( 0.258824, 0.0862745, 0.0862745, 1 )
text = "ORDER!"

[node name="voice_label" type="Label" parent="GameUi"]
margin_left = 759.269
margin_top = 173.751
margin_right = 856.269
margin_bottom = 213.751
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.466667, 1, 0.247059, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "YELL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="punch_label" type="Label" parent="GameUi"]
margin_left = 1072.47
margin_top = 175.958
margin_right = 1184.47
margin_bottom = 215.958
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.764706, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "PUNCH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voice_track" type="PanelContainer" parent="GameUi"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -102.0
margin_top = -11.0
margin_right = -2.0
margin_bottom = 1092.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="punch_track" type="PanelContainer" parent="GameUi"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 2.0
margin_top = -10.0
margin_right = 102.0
margin_bottom = 1092.0
custom_styles/panel = SubResource( 8 )

[node name="rythm_bar" type="ColorRect" parent="GameUi"]
margin_left = 858.463
margin_top = 199.098
margin_right = 862.463
margin_bottom = 403.098
rect_rotation = -89.9999
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voice_indicator" type="ColorRect" parent="GameUi"]
visible = false
margin_left = 858.0
margin_top = -11.0
margin_right = 958.0
margin_bottom = 199.0
color = Color( 1, 0.960784, 0, 0.576471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="punch_indicator" type="ColorRect" parent="GameUi"]
visible = false
margin_left = 962.0
margin_top = -10.0
margin_right = 1062.0
margin_bottom = 199.0
color = Color( 1, 0.960784, 0, 0.576471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawn_punch_notes" type="Node2D" parent="GameUi"]
position = Vector2( 967.463, 1079.94 )

[node name="spawn_voice_notes" type="Node2D" parent="GameUi"]
position = Vector2( 863.782, 1080.09 )

[node name="order1" type="RichTextLabel" parent="GameUi"]
visible = false
margin_left = 439.251
margin_top = 394.237
margin_right = 1939.25
margin_bottom = 694.237
rect_min_size = Vector2( 1500, 300 )
rect_rotation = -17.2346
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[wave]ORDEEER!"
text = "ORDEEER!"

[node name="order2" type="RichTextLabel" parent="GameUi"]
visible = false
margin_left = 855.794
margin_top = 219.167
margin_right = 2355.79
margin_bottom = 519.167
rect_min_size = Vector2( 1500, 300 )
rect_rotation = 14.5131
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[wave]ORDEER"
text = "ORDEER"

[node name="order3" type="RichTextLabel" parent="GameUi"]
visible = false
margin_left = 448.66
margin_top = 382.02
margin_right = 1948.66
margin_bottom = 682.02
rect_min_size = Vector2( 1500, 300 )
rect_rotation = -9.36995
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[wave]ORDEEEEER!!!"
text = "ORDEEEEER!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="order4" type="RichTextLabel" parent="GameUi"]
visible = false
margin_left = 591.641
margin_top = 45.2977
margin_right = 2091.64
margin_bottom = 345.298
rect_min_size = Vector2( 1500, 300 )
rect_rotation = 23.6519
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[wave]ORDEEER!"
text = "ORDEEER!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="order5" type="RichTextLabel" parent="GameUi"]
visible = false
margin_left = 668.734
margin_top = 127.307
margin_right = 2168.73
margin_bottom = 427.307
rect_min_size = Vector2( 1500, 300 )
rect_rotation = 1.79467
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[wave]ORDEER"
text = "ORDEER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="order6" type="RichTextLabel" parent="GameUi"]
visible = false
margin_left = 732.589
margin_top = -50.5548
margin_right = 2232.59
margin_bottom = 249.445
rect_min_size = Vector2( 1500, 300 )
rect_rotation = 17.3654
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[wave]ORDEEEEER!!!"
text = "ORDEEEEER!!!"

[node name="order7" type="RichTextLabel" parent="GameUi"]
visible = false
margin_left = -2.40372
margin_top = 328.441
margin_right = 1497.6
margin_bottom = 628.441
rect_min_size = Vector2( 1500, 300 )
rect_rotation = -17.4505
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[wave]ORDEEER!"
text = "ORDEEER!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="order8" type="RichTextLabel" parent="GameUi"]
visible = false
margin_left = 1269.31
margin_top = -17.1279
margin_right = 2769.31
margin_bottom = 282.872
rect_min_size = Vector2( 1500, 300 )
rect_rotation = 14.5131
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[wave]ORDEER"
text = "ORDEER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Control" parent="GameUi"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 213.2
margin_top = -281.176
margin_right = 253.2
margin_bottom = -241.176
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="GameUi/score"]

[node name="score_label" type="Label" parent="GameUi/score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = -21.5
margin_right = 62.0
margin_bottom = 21.5
rect_rotation = -13.3788
custom_fonts/font = SubResource( 11 )
text = "SCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_value" type="Label" parent="GameUi/score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.7595
margin_top = 14.8634
margin_right = 178.24
margin_bottom = 98.8634
rect_rotation = -6.58455
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "VALUE"

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameUi/score"]
anims/idle = SubResource( 13 )

[node name="combo_voice" type="Control" parent="GameUi"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -514.165
margin_top = -400.253
margin_right = -474.165
margin_bottom = -360.253
rect_rotation = -6.86177
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="GameUi/combo_voice"]

[node name="combo_label" type="Label" parent="GameUi/combo_voice"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.336
margin_top = -146.82
margin_right = 154.664
margin_bottom = -103.82
rect_rotation = 6.72646
custom_fonts/font = SubResource( 11 )
text = "YELLING_COMBO:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="combo_value" type="Label" parent="GameUi/combo_voice"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.26
margin_top = -94.948
margin_right = 88.739
margin_bottom = -10.948
rect_rotation = 5.69781
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "VALUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="combo_punch" type="Control" parent="GameUi"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -449.116
margin_top = -250.816
margin_right = -409.115
margin_bottom = -210.816
rect_rotation = -6.86177
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="GameUi/combo_punch"]

[node name="combo_label" type="Label" parent="GameUi/combo_punch"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.336
margin_top = -146.82
margin_right = 154.664
margin_bottom = -103.82
rect_rotation = 6.72646
custom_fonts/font = SubResource( 11 )
text = "PUNCHING_COMBO:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="combo_value" type="Label" parent="GameUi/combo_punch"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.26
margin_top = -94.948
margin_right = 88.739
margin_bottom = -10.948
rect_rotation = 5.69781
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "VALUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrderTween" type="Tween" parent="GameUi"]
[connection signal="power_update" from="MicRecord" to="." method="_on_power_update"]
